--- a/rtk/package.json
+++ b/rtk/package.json
@@ -8,5 +8,8 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "redux-logger": "^3.0.6"
+  }
 }
