--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.1",
     "redux": "^4.2.1",
-    "redux-thunk": "^2.4.2"
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.4.2",
+    "vite": "^4.4.4"
   },
   "devDependencies": {
     "process": "^0.11.10"
